Revert changes on FaultResult constructor & update same way as write in JsonFaultList
Signed-off-by: Thomas ADAM <tadam@silicom.fr>